infrastructure/flux/webhook-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  annotations:
    app: flux
spec:
  rules:
  - host: flux.ltc.bcit.ca
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
    - hosts:
        - flux.ltc.bcit.ca
      secretName: star-ltc-bcit-ca
